  Also use variable length arguments for the getOrdinal call in TaxonomyReader. (Gautam Worah)

* LUCENE-10036: Replaced the ScoreCachingWrappingScorer ctor with a static factory method that
  ensures unnecessary wrapping doesn't occur. (Greg Miller)

* LUCENE-10027: Add a new Directory reader open API from indexCommit and
   a custom comparator for sorting leaf readers (Mayya Sharipova).

New Features
---------------------
(No changes)

Improvements
---------------------

* LUCENE-9944: Allow DrillSideways users to provide their own CollectorManager without also requiring
  them to provide an ExecutorService. (Greg Miller)

* LUCENE-9946: Support for multi-value fields in LongRangeFacetCounts and
  DoubleRangeFacetCounts. (Greg Miller)

* LUCENE-9965: Added QueryProfilerIndexSearcher and ProfilerCollector to support debugging
  query execution strategy and timing. (Jack Conradson, Julie Tibshirani)

* LUCENE-9981: Operations.getCommonSuffix/Prefix(Automaton) is now much more
  efficient, from a worst case exponential down to quadratic cost in the
  number of states + transitions in the Automaton.  These methods no longer
  use the costly determinize method, removing the risk of
  TooComplexToDeterminizeException (Robert Muir, Mike McCandless)

* LUCENE-9981: Operations.determinize now throws TooComplexToDeterminizeException
  based on too much "effort" spent determinizing rather than a precise state
  count on the resulting returned automaton, to better handle adversarial
  cases like det(rev(regexp("(.*a){2000}"))) that spend lots of effort but
  result in smallish eventual returned automata.  (Robert Muir, Mike McCandless)

* LUCENE-9983: Stop sorting determinize powersets unnecessarily. (Patrick Zhai)

* LUCENE-9177: ICUNormalizer2CharFilter no longer requires normalization-inert
  characters as boundaries for incremental processing, vastly improving worst-case
  performance. (Michael Gibney)
